--- a/app/index.html
+++ b/app/index.html
@@ -14,10 +14,12 @@
     <script src="js/controller/cargandoController.js"></script>
     <script src="js/controller/resultadoController.js"></script>
     <script src="js/controller/seleccionController.js"></script>
+
+    <script src="cordova.js"></script>
 </head>
 
 <body ng-app="GeneradorLoterias" ng-controller="MainController" data-ng-init="initApp()">
-    <h1>Bienvenido al generador de loterías</h1>
+    <h1>Bienvenido al generador de loter&iacute;as</h1>
     <ng-view></ng-view>
 </body>
 
